# pinsight

./: .gitignore  .gitmodules  CMakeLists.txt  CUDA_trace_config.install  Dockerfile  LICENSE  MPI_trace_config.install  Makefile  OpenMP_trace_config.install  PINSIGHT_TRACE_CONFIG.md  PINSIGHT_TRACE_CONFIG_FORMAT.md  README.md  RELATED.md  environment.mk
doc/: CastroEvaluationPlan.md  E1_evaluation.md  E1_overhead_chart.html  E4_walkthrough.md  EvaluationPlan-E2.md  EvaluationPlan.md  ModeSwitchTestAndOverheadEvaluation-2026-03-19.md  PINSIGHT_TRACE_CONFIG_FORMAT.md  control_thread_design.md  cuda_support_design.md  data_race_analysis.md  domain_trace_modes.md  e2_castro_overhead_analysis.md  energy_power_implementation_plan.md  four_mode_implementation_plan.md  four_mode_trace_design.md  mpi_overhead_analysis.md  optimization_strategies.md  paper_review_SC26.md  pinsight_feature_summary.md  pinsight_region_begin.md  pinsight_vs_nsight_systems.md  python_trace_config.md  python_tracing_design.md  python_tracing_implementation.md  rate-limit-tracing.md  related.md  signal_handler_reload_config.md  trace_config_design.md
eva/: README.md  Ubuntu-linux-x86_64-gcc-gfortran.cfg  e2_bench.sh  e2_bench_full.sh  e2_cuda_only.install  e2_off.install  e2_rate_limited.install  fornax.md  score-p-install.md  tau-install.md
eva/spec_omp2012-1.1/: README.md  Ubuntu-linux-x86_64-gcc-gfortran.cfg
experiment/backtrace/: Makefile  backtrace.c  backtrace_dlinfo.c  backtrace_libunwind.c  stacktraceDemo.c
experiment/beforeAfterMain/: Makefile  before_after_main.c  before_after_main_tracepoint.h  hello.c
experiment/llvm-openmp/: Makefile  callback.h  test-ompt
experiment/llvm-openmp-target/: Makefile  README.md  callback.h  helloomp  helloomp.c  target.c  targetomp  targetomp.c  task  task.c
experiment/llvm-openmp-task/: Makefile  README.md  task.c  task_depend.c  task_depend2.c  task_taskwait_depend.c  taskloop.c
experiment/llvm-openmp-test/: Makefile  callback.h
experiment/lttng-tracecompass-srcwindow/: README.md
experiment/lttng-tracecompass-srcwindow/src/: app.c  app.h  hello-tp.c  hello-tp.h  hello.c  tp.c  tp.h  trace-build.sh  trace-start.sh  trace-stop.sh
experiment/lttng_cupti/: Makefile  README.md  cupti_callback.c  cupti_callback.h  env.sh  lttng_cupti_tracepoint.h  vecadd.c  vecadd.cu  vecadd_cuda_lttng_traces.txt
experiment/lttng_cupti/cupti_samples/: Makefile
experiment/lttng_pmpi/: Makefile  jacobi_mpi_4np.c  jacobi_mpi_4np_lttng_traces.txt  jacobi_mpi_4np_traces.txt  lttng_tracepoint_mpi.h  pmpi_mpi.c
experiment/lttng_pmpi/jacobi_mpi_4np_lttng_traces/ust/uid/502/64-bit/: channel0_0  channel0_1  channel0_2  channel0_3  metadata
experiment/lttng_pmpi/jacobi_mpi_4np_lttng_traces/ust/uid/502/64-bit/index/: channel0_0.idx  channel0_1.idx  channel0_2.idx  channel0_3.idx
python/: README.md  get_max_energy.py  per_region.py  per_thread.py  per_thread_per_region.py  plot_energy.py  plot_perf.py  showreg.py
scripts/: commands.txt  lulesh-batch.sh  trace.sh  trace_experiment.sh
src/: CMakeLists.txt  CUDA_domain.h  CUDA_trace.config.install  HIP_trace.config.install  MPI_domain.h  MPI_trace.config.install  MPI_trace_config.install  OpenCL_trace.config.install  OpenMP_domain.h  OpenMP_trace.config.install  OpenMP_trace_config.install  PINSIGHT_TRACE_CONFIG_FORMAT.md  app_knob.c  app_knob.h  backtrace.c  backtrace.h  bitset.c  bitset.h  bitsetmain.c  callback.h  common_tp_fields_global_lttng_tracepoint.h  common_tp_fields_global_lttng_ust_tracepoint.h  cupti_callback.c  cupti_lttng_tracepoint.h  cupti_lttng_ust_tracepoint.h  enter_exit.c  enter_exit_lttng_ust_tracepoint.h  enter_exit_pinsight.c  enter_exit_pinsight_tracepoint.h  env_config.c  env_config.h  lexgion_trace_config.c  lexgion_trace_config.h  lexgion_trace_config_example.txt  lexgion_trace_config_example2.txt  lexgion_trace_config_fulltrace.txt  load_baseaddr.c  load_baseaddr.h  lttng_tracepoint.h  ompt_callback.c  (+36 more)
src/config/: CUDA_domain.h  CUDA_trace_config.install  MPI_domain.h  OpenMP_domain.h  OpenMP_trace_config.install  bitset.h  domain_info.h  main.c  openmp_domain.h  trace_domain_dsl.h  trace_domain_loader.c  trace_domain_loader.h
test/: Makefile  README.md  environment.mk  vecadd.cu
test/Fortran/: Makefile  hello.f90
test/cuda/: .gitignore  CUDA_trace_config.install  MPI_trace_config.install  OpenMP_trace_config.install  test_codeptr  test_codeptr.cu  vecadd_pinsight.cu  verify_trace.sh
test/hello/: Makefile  helloomp.c
test/jacobi/: Makefile  jacobi.c  parse_bench.py  run_bench.sh  trace_config_rate100.txt
test/lttng/: Makefile  pthread_yield_suspend.c  yield_suspend_tp.h
test/lulesh/: Makefile
test/mpiomp_nested/: .gitignore  Makefile  test.c  test_mpi_full.c  test_mpi_overhead.c
test/python_simple/: Makefile  python_simple.py
test/trace_config_parse/: test_config_parser.c
tracecompass/: README.md  color_pick.xlsx  debugging4performanc.md  pinsight-analysis.xml  pinsight-analysis_new.xml  pinsight-pattern-analysis.xml  pinsight_analysis.xml  pinsight_cuda_analysis.xml  pinsight_mpi_analysis.xml  pinsight_mpi_pattern_analysis.xml  pinsight_omp_analysis.xml  pinsight_omp_mpi_analysis-experiment.xml  pinsight_omp_mpi_analysis.xml  pinsight_omp_pattern_analysis.xml  processor_color.sh
tracecompass/DebuggerIntegrationExperiment/: README.md  SampleView.java  pinsight3d.java
tracecompass/JavaFX3DView/: README.md  plugin.xml
tracecompass/JavaFX3DView/src/pinsight3dfxview/: Activator.java
tracecompass/JavaFX3DView/src/pinsight3dfxview/views/: Pinsight3DView.java
tracecompass/SourceCodeLookup/: README.md
tracecompass/getStarted/: README.md  pinsight-analysis.xml  traces.tar
tracecompass/theia/: README.md
visuomp/: .gitignore  Dockerfile  README.md  lttng_tracepoint.h
